# openapi.yaml
@@ -239,6 +239,53 @@ paths:
       responses:
         '200':
           description: No response body
+  /api/v0/payments/orders/history/:
+    get:
+      operationId: api_v0_payments_orders_history_list
+      parameters:
+      - name: limit
+        required: false
+        in: query
+        description: Number of results to return per page.
+        schema:
+          type: integer
+      - name: offset
+        required: false
+        in: query
+        description: The initial index from which to return the results.
+        schema:
+          type: integer
+      tags:
+      - api
+      security:
+      - cookieAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PaginatedOrderHistoryList'
+          description: ''
+  /api/v0/payments/orders/history/{id}/:
+    get:
+      operationId: api_v0_payments_orders_history_retrieve
+      parameters:
+      - in: path
+        name: id
+        schema:
+          type: string
+        required: true
+      tags:
+      - api
+      security:
+      - cookieAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrderHistory'
+          description: ''
   /integrated_system/:
     get:
       operationId: integrated_system_list
@@ -615,6 +662,137 @@ components:
       required:
       - id
       - name
+    Line:
+      type: object
+      description: Serializes a line item for an order.
+      properties:
+        id:
+          type: integer
+          readOnly: true
+        quantity:
+          type: integer
+          maximum: 2147483647
+          minimum: 0
+        item_description:
+          type: string
+          readOnly: true
+        unit_price:
+          type: string
+          format: decimal
+          pattern: ^-?\d{0,7}(?:\.\d{0,2})?$
+        total_price:
+          type: string
+          format: decimal
+          pattern: ^-?\d{0,7}(?:\.\d{0,2})?$
+        product:
+          $ref: '#/components/schemas/Product'
+      required:
+      - id
+      - item_description
+      - product
+      - quantity
+      - total_price
+      - unit_price
+    Nested:
+      type: object
+      properties:
+        id:
+          type: integer
+          readOnly: true
+        password:
+          type: string
+          maxLength: 128
+        last_login:
+          type: string
+          format: date-time
+          nullable: true
+        is_superuser:
+          type: boolean
+          title: Superuser status
+          description: Designates that this user has all permissions without explicitly
+            assigning them.
+        username:
+          type: string
+          description: Required. 150 characters or fewer. Letters, digits and @/./+/-/_
+            only.
+          pattern: ^[\w.@+-]+$
+          maxLength: 150
+        first_name:
+          type: string
+          maxLength: 150
+        last_name:
+          type: string
+          maxLength: 150
+        email:
+          type: string
+          format: email
+          title: Email address
+          maxLength: 254
+        is_staff:
+          type: boolean
+          title: Staff status
+          description: Designates whether the user can log into this admin site.
+        is_active:
+          type: boolean
+          title: Active
+          description: Designates whether this user should be treated as active. Unselect
+            this instead of deleting accounts.
+        date_joined:
+          type: string
+          format: date-time
+        groups:
+          type: array
+          items:
+            type: integer
+          description: The groups this user belongs to. A user will get all permissions
+            granted to each of their groups.
+        user_permissions:
+          type: array
+          items:
+            type: integer
+          description: Specific permissions for this user.
+      required:
+      - id
+      - password
+      - username
+    OrderHistory:
+      type: object
+      properties:
+        id:
+          type: integer
+          readOnly: true
+        state:
+          $ref: '#/components/schemas/StateEnum'
+        reference_number:
+          type: string
+          maxLength: 255
+        purchaser:
+          allOf:
+          - $ref: '#/components/schemas/Nested'
+          readOnly: true
+        total_price_paid:
+          type: string
+          format: decimal
+          pattern: ^-?\d{0,15}(?:\.\d{0,5})?$
+        lines:
+          type: array
+          items:
+            $ref: '#/components/schemas/Line'
+        created_on:
+          type: string
+          format: date-time
+          readOnly: true
+        updated_on:
+          type: string
+          format: date-time
+          readOnly: true
+      required:
+      - created_on
+      - id
+      - lines
+      - purchaser
+      - total_price_paid
+      - updated_on
     PaginatedBasketItemList:
       type: object
       required:
@@ -684,6 +862,29 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/IntegratedSystem'
+    PaginatedOrderHistoryList:
+      type: object
+      required:
+      - count
+      - results
+      properties:
+        count:
+          type: integer
+          example: 123
+        next:
+          type: string
+          nullable: true
+          format: uri
+          example: http://api.example.org/accounts/?offset=400&limit=100
+        previous:
+          type: string
+          nullable: true
+          format: uri
+          example: http://api.example.org/accounts/?offset=200&limit=100
+        results:
+          type: array
+          items:
+            $ref: '#/components/schemas/OrderHistory'
     PaginatedProductList:
       type: object
       required:
@@ -824,6 +1025,24 @@ components:
       - sku
       - system
       - updated_on
+    StateEnum:
+      enum:
+      - pending
+      - fulfilled
+      - canceled
+      - refunded
+      - declined
+      - errored
+      - review
+      type: string
+      description: |-
+        * `pending` - Pending
+        * `fulfilled` - Fulfilled
+        * `canceled` - Canceled
+        * `refunded` - Refunded
+        * `declined` - Declined
+        * `errored` - Errored
+        * `review` - Review
   securitySchemes:
     cookieAuth:
       type: apiKey
